# ThermoFooty

./: .gitignore  CITATION.cff  README.md  environment.yml  local_paths.template.json  pyproject.toml
.github/workflows/: docs.yml  network-tests.yml  release.yml  tests.yml
db/: schema.sql
db/migrations/: 0001_initial.sql
db/seed/: english_club_stadium_history.csv  english_stadia.csv
docs/: conf.py  diary.md  getting_started.md  index.md  methods.md  pipeline.md  requirements.txt
scripts/: backfill_weather.py  ingest_english_leagues.py  ingest_fbref.py  reconcile_fbref.py  run_h1.py  smoke_test_phase2b.py  validate_cascade.py
tests/: test_db_migration.py  test_fbref_foundation.py  test_fbref_ingest.py  test_fbref_match_report.py  test_fbref_reconcile.py  test_football_data_uk.py  test_inference.py  test_lookup_cascade.py  test_panel.py  test_scaffold.py  test_stadia.py  test_weather_backfill.py
tests/fixtures/fbref/: match_report_aa1de559_excerpt.html  schedule_epl_2023_24_excerpt.html
thermofooty/: __init__.py  config.py  constants.py  inference.py  lookup.py  panel.py  viz.py
thermofooty/db/: __init__.py
thermofooty/sources/: __init__.py  fbref.py  fbref_ingest.py  fbref_reconcile.py  football_data_uk.py  stadia.py
thermofooty/weather/: __init__.py  backfill.py  era5_src.py  hadcet_src.py  meteostat_src.py  twentycr_src.py
